--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.0",
-    "react-navigation-drawer": "^2.5.0"
+    "react-navigation-drawer": "^2.5.0",
+    "react-navigation-stack": "^2.8.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
